cabal-version:      2.4
name:               jparser
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/Turtel216/JSON-Parser
license:            MIT
license-file:       LICENSE
author:             Dimitrios Papakonstantinou
maintainer:         papakonstantinou.dm@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  JParser
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite jparser-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    other-extensions: OverloadedStrings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        jparser,
        HUnit ^>=1.6.2.0
